# splinx

./: Lyoponov.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: Lyoponov-checkpoint.ipynb
example_package/: magicc.py
splinx/: jit_error_example.py  spline.py  spline_v2.py
tests/: conftest.py  test_bspline.py  test_skeleton.py
